# Academy

./: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  zad3.cpp
